Fix collapse background color on profile-menu
Summary: This color needs to be fixed since we want the collapse icon over the menu.

Test Plan: Shrink window so area has to scroll, see collapse above the rest of the menu.

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: Korvin

Differential Revision: https://secure.phabricator.com/D16674

--- a/webroot/rsrc/css/phui/phui-profile-menu.css
+++ b/webroot/rsrc/css/phui/phui-profile-menu.css
@@ -17,8 +17,12 @@
 }
 
 .phui-profile-menu .phabricator-side-menu {
-  background: rgba({$alphablue}, 0.15);
+  background: #dee0e7;
   width: 240px;
+}
+
+.phabricator-side-menu .phui-profile-menu-footer-1 {
+  background: #dee0e7;
 }
 
 .phui-profile-menu .phabricator-side-menu .phui-list-item-view {
